# dm-assistant

./: CMakeLists.txt  README.md  README_RU.md  character.cpp  character.h  config.xml  creature.cpp  creature.h  dndcampaign.cpp  dndcampaign.h  dndcharacter.cpp  dndcharacter.h  dndcreature.cpp  dndcreature.h  dndmonster.cpp  dndmonster.h  dndspellwidget.cpp  dndspellwidget.h  dndspellwidget.ui  encounter.cpp  encounter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monster.cpp  monster.h  qdndcharacterwidget.cpp  qdndcharacterwidget.h  qdndcharacterwidget.ui  qdndinitiativeentityeditwidget.cpp  qdndinitiativeentityeditwidget.h  qdndinitiativeentityeditwidget.ui  qinitiativetrackerwidget.cpp  qinitiativetrackerwidget.h  qinitiativetrackerwidget.ui  qinititivetrackerwidget.cpp  qinititivetrackerwidget.h  qinititivetrackerwidget.ui  qplayer.cpp  (+10 more)
config-templates/: campain.dtd  campain.xml  character-sheet.xml  charsheet.dtd  class.xml  monster.xml  npc.xml  player.xml  playlist.dtd  playlist.xml  race.xml  spell.dtd  spell.xml
palettes/: palette-dark.xml
static/: app_resources.qrc  palette-dark.xml  resources.rc
translations/: dm-assist_en_US.qm  dm-assist_en_US.ts  dm-assist_ru_RU.qm  dm-assist_ru_RU.ts
